# DolceCaffeBot

./: .env.example  .replit  bot.py  config.py  dolce_db.db  main.py  pyproject.toml  replit.nix  requirements.txt  start.py
bot/: anyText_bot.py  bot.py  broadcast_bot.py  cashbox_bot.py  coffeemaker_bot.py  feedback_bot.py  help.py  planner.py  purchase_bot.py  reminder.py  start.py  subscription_bot.py
db/: codes.py  feedback.py  purchases.py  subscription_codes.py  subscriptions.py  users.py
keyboards/: main_menu.py  shifts_keyboard.py
services/: schedule_parser.py  schedule_storage.py  scheduler.py
settings/: consts.py
update_db_scripts/: 20251103.sh
utils/: admin.py  code_generator.py  date_utils.py  declension_noun.py  link_checker.py  number_utils.py  send_message.py  shifts.py  subcription_free_beverage.py  user_utils.py
